# trabalho_estatistica

./: .gitignore  README.md  gerador.py  inferencia.py  main.py  pyproject.toml  regressao.py  requirements.txt  utils.py
Dados_Relatorio/: cenario_a.csv  terminal.txt
Dados_Relatorio_Normalizado42/: cenario_b.csv  cenario_c.csv  terminal.txt
entregaveis/relatorio/: cenario_a.csv  cenario_b.csv  cenario_c.csv  terminal.txt
