[project]
name = "trabalho-estatistica"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = "3.14.2"
dependencies = [
    "numpy (>=2.5.0,<3.0.0)",
    "scipy (>=1.18.0,<2.0.0)",
    "matplotlib (>=3.11.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
